# learning-projects

./: .gitignore  README.md
C++/GameOfLife/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  setup.py
C++/GameOfLife/GameOfLife/: CMakeLists.txt  GameOfLife.cpp
C++/GameOfLife/app/: CMakeLists.txt  main.cpp
C++/GameOfLife/src/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h
C++/GameOfLife/src/engine/: Cell.cpp  Cell.h  Loop.cpp  Loop.h  Orchestrator.cpp  Orchestrator.h
C++/GameOfLife/src/rendering/: Renderer.cpp  Renderer.h
C++/GameOfLife/src/scenarios/: scenario-1.json
Java/Vending Machine/Vending-Machine/: pom.xml
Java/Vending Machine/Vending-Machine/src/main/java/: Console.java  Main.java  Product.java  Screen.java
Java/Vending Machine/Vending-Machine/src/main/java/helpers/: JsonReader.java  YMLReader.java
Java/Vending Machine/Vending-Machine/src/main/java/vendingmachine/: Console.java  Product.java  Screen.java  VendingMachine.java
Python/Playwright/: README.md  requirements.txt
Python/Playwright/helpers/: API.py  DB.py
Python/Playwright/tests/API/: test_python_api.py
Python/Search Algorithms/AddTwoLinkedLists/: LinkedListsAddition.py
Python/Search Algorithms/TwoPointerSearch/: TwoPointerSearch.py
REST-APIs/Python/: py_api.py
